apps/frontend/src/styles/mixins.scss
@mixin fullWidthBg($background) {
  box-shadow: 0 0 0 100vmax $background;
  clip-path: inset(0 -100vmax);
  background: $background;
}

@mixin card() {
  width: 100%;
  height: fit-content;
  max-width: 300px;
  display: flex;
  flex-direction: column;
  padding: 8px;
  gap: 16px;
  position: relative;
  border-radius: var(--s-border-radius);
  background: var(--c-main-background);

  @media screen and (max-width: 360px) {
    background: var(--c-card-background);
  }

  &:hover {
    background: var(--c-card-background-hovered);
  }
}

@mixin slideFromRight($defaultShowedWidth) {
  transition: all .5s;
  transform: translateX(calc(100% - $defaultShowedWidth));

  &:hover {
    transform: translateX(0);
  }
}

@mixin cardSideButton() {
  border-radius: var(--s-border-radius) 0 0 var(--s-border-radius);
  gap: 6px;
  padding: 5px 10px;
  font-size: var(--fs-span);
  background: var(--c-accent);
  font-weight: var(--fw-light);
  line-height: 1;
}

@mixin ellipsisText() {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

@mixin multiLineEllipsis($lineCount) {
  @include ellipsisText();
  white-space: unset;
  display: -webkit-box;
  line-clamp: $lineCount;
  -webkit-line-clamp: $lineCount;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

@mixin mobileDevice() {
  @media screen and (max-width: $bp-sm) {
    @content;
  }
}

@mixin tabletDevice() {
  @media screen and (max-width: $bp-md) {
    @content;
  }
}

@mixin desktopDevice() {
  @media screen and (min-width: $bp-md) {
    @content;
  }
}

